simple-pipeline jenkins file added pwd,ls command

--- a/simple-pipeline/Jenkinsfile
+++ b/simple-pipeline/Jenkinsfile
@@ -3,6 +3,12 @@ pipeline{
         label "any"
     }
     stages{
+        stage("workspace"){
+            steps{
+                sh "pwd"
+                sh "ls -la"
+            }
+        }
         stage("Build"){
             steps{
                 echo "Building application..."
