added go run hello app

--- a/simple-pipeline/Jenkinsfile
+++ b/simple-pipeline/Jenkinsfile
@@ -15,6 +15,7 @@ pipeline{
                 sh "id"
                 sh "date"
                 sh "sleep 1"
+                sh "go run simple-pipeline/hello-world.go"
             }
         }
 
