--- a/simple-pipeline/Jenkinsfile
+++ b/simple-pipeline/Jenkinsfile
@@ -18,7 +18,7 @@ pipeline{
                 sh "id"
                 sh "date"
                 sh "sleep 1"
-                sh "go run simple-pipeline/hello-world.go"
+                sh "go build simple-pipeline/hello-web.go"
             }
         }
 
@@ -28,6 +28,12 @@ pipeline{
                 sh "id"
                 sh "date"
                 sh "sleep 1"
+                sh "go run simple-pipeline/hello-world.go"
+                sh "./hello-web"
+                sh '''
+                    response=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8080) &&
+                    echo response is: $response &&
+                    ["$response" == "200"] && exit 0 || exit 1'''
             }
         }
 
