--- a/simple-pipeline/Jenkinsfile
+++ b/simple-pipeline/Jenkinsfile
@@ -29,7 +29,7 @@ pipeline{
                 sh "date"
                 sh "sleep 1"
                 sh "go run simple-pipeline/hello-world.go"
-                sh "./hello-web"
+                sh "./hello-web &"
                 sh '''
                     response=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8080) &&
                     echo response is: $response &&
