--- a/simple-pipeline/Jenkinsfile
+++ b/simple-pipeline/Jenkinsfile
@@ -33,7 +33,10 @@ pipeline{
                 sh '''
                     response=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8081) &&
                     echo response is: $response &&
-                    [$response -eq 200] && exit 0 || exit 1'''
+                    if[$response -eq 200];
+                      exit 0 
+                    else
+                      exit 1'''
             }
         }
 
