--- a/simple-pipeline/Jenkinsfile
+++ b/simple-pipeline/Jenkinsfile
@@ -33,10 +33,13 @@ pipeline{
                 sh '''
                     response=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8081) &&
                     echo response is: $response &&
-                    if[$response -eq 200];
+                    
+                    if[[$response -eq 200]]
+                    then
                       exit 0 
                     else
-                      exit 1'''
+                      exit 1
+                    fi'''
             }
         }
 
