added bash bang

--- a/simple-pipeline/Jenkinsfile
+++ b/simple-pipeline/Jenkinsfile
@@ -31,9 +31,10 @@ pipeline{
                 sh "go run simple-pipeline/hello-world.go"
                 sh "./hello-web &"
                 sh '''
+                    #/bin/bash
                     response=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8081) &&
                     echo response is: $response &&
-                    
+
                     if[[$response -eq 200]]
                     then
                       exit 0 
