--- a/simple-pipeline/Jenkinsfile
+++ b/simple-pipeline/Jenkinsfile
@@ -31,7 +31,7 @@ pipeline{
                 sh "go run simple-pipeline/hello-world.go"
                 sh "./hello-web &"
                 sh '''
-                    #/bin/bash
+                    #!/bin/bash
                     response=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8081) &&
                     echo response is: $response &&
 
