--- a/simple-pipeline/Jenkinsfile
+++ b/simple-pipeline/Jenkinsfile
@@ -33,8 +33,8 @@ pipeline{
                 sh '''
                     #!/bin/bash
                     response=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8081) &&
-                    echo response is: $response &&
-
+                    echo response is: $response
+                    
                     if [[$response -eq 200]]
                     then
                       exit 0 
