--- a/simple-pipeline/Jenkinsfile
+++ b/simple-pipeline/Jenkinsfile
@@ -35,7 +35,7 @@ pipeline{
                     response=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8081) &&
                     echo response is: $response
 
-                    if [[ &response -eq 200 ]]
+                    if [[ $response -eq 200 ]]
                     then
                       exit 0 
                     else
