--- a/simple-pipeline/Jenkinsfile
+++ b/simple-pipeline/Jenkinsfile
@@ -30,17 +30,8 @@ pipeline{
                 sh "sleep 1"
                 sh "go run simple-pipeline/hello-world.go"
                 sh "./hello-web &"
-                sh '''
-                    #!/bin/bash
-                    response=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8081) &&
-                    echo response is: $response
-
-                    if [[ $response -eq 200 ]]
-                    then
-                      exit 0 
-                    else
-                      exit 1
-                    fi'''
+                sh "chmod +x execute.sh"
+                sh "./execute.sh"
             }
         }
 
